manifests/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-webserver
  template:
    metadata:
      labels:
        app: flask-webserver
    spec:
      containers:
      - name: flask-webserver
        # we're using a locally running container registry, so that's why "localhost:5001"
        # see: start_registry.sh
        image: localhost:5001/flask-webserver:latest
        volumeMounts:
        - name: k3s-mount
          mountPath: /tmp/k3s-data
        ports:
        - containerPort: 8000
      volumes:
      - name: k3s-mount
        persistentVolumeClaim:
          claimName: log-data-claim
