manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8005
  type: ClusterIP
