manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dojo
spec:
  clusterIP: None
  ports:
    - port: DATABASE_PORT
  selector:
    app: postgres
