manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webserver-to-backend
  namespace: dojo
spec:
  podSelector:
    matchLabels:
      app: flask-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flask-webserver
